scenarios/02-grpc/31-backend-a-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-backend-a-route
  namespace: grpc-backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: grpc-multi-namespace-gateway
      namespace: gateway-system
      sectionName: grpcs
  hostnames:
    - grpc-a.example.test
  rules:
    - backendRefs:
        - name: grpc-api
          port: 9000
